# RAG-Notes-Assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py  rag.py  test.py
app/frontend/: app.py
app/ingestion/: chunker.py  embedder.py  pdf_reader.py  pipeline.py
app/llm/: gemini_client.py
app/memory/: memory.py
app/reranking/: reranker.py
app/retrieval/: retriever.py
app/vectordb/: create_collection.py  qdrant_store.py  store_vectors.py
