[project]
name = "rag-notes-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
